Modified changes as epr the discussion